--- a/package.json
+++ b/package.json
@@ -22,17 +22,16 @@
   },
   "homepage": "https://github.com/maxx-t/chainpoint2ots#readme",
   "dependencies": {
-    "bcoin": "^1.0.0-beta.15",
+    "bcoin": "^1.0.2",
     "body-parser": "^1.18.3",
-    "express": "^4.16.3",
-    "express-async-errors": "^2.1.2",
-    "javascript-opentimestamps": "^0.4.2",
-    "request-promise": "^4.2.2"
+    "express": "^4.16.4",
+    "javascript-opentimestamps": "^0.4.3",
+    "request-promise": "^4.2.4"
   },
   "devDependencies": {
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.12.0"
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.17.2"
   },
   "repository": {
     "type": "git",
